# WhaSwapp

./: .gitignore  .gitmodules  AGENTS.md  FEATURES.md  LICENSE  NOTICE  PATCHES.md  PLAN.md  README.md  package.json  pnpm-lock.yaml
.run/: LiteWA Dev.run.xml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/baileys-adapter/: index.js  package-lock.json  package.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src-tauri/src/backend/: baileys.rs  mod.rs  rust.rs
apps/desktop/src-tauri/src/storage/: db.rs  mod.rs
apps/desktop/src-tauri/src/tests/: db_tests.rs  mod.rs  security_tests.rs
apps/desktop/src-tauri/src/utils/: chrome.rs  mod.rs  security.rs
apps/desktop/src/components/: ChatList.tsx  ChatWindow.tsx  LLMSettings.tsx  MessageInput.tsx  SettingsPanel.tsx  Terminal.tsx
apps/desktop/src/services/: ai.ts  ipc.ts
apps/desktop/src/stores/: authStore.ts  chatStore.ts  featureStore.ts  settingsStore.ts  terminalStore.ts
apps/desktop/src/styles/: global.css
libs/cli-chat-rs/: .gitignore  Cargo.toml  README.md
libs/cli-chat-rs/examples/: custom_adapter.rs
libs/cli-chat-rs/src/: lib.rs  main.rs
libs/cli-chat-rs/src/adapter/: demo.rs  mod.rs  traits.rs
libs/cli-chat-rs/src/config/: mod.rs
libs/cli-chat-rs/src/types/: mod.rs
libs/web-intelligence/: README.md
libs/web-intelligence/src/: lib.rs
scripts/: apply_patches.sh  generate_logo.py
t/: Cargo.toml
(+2 files in other folders)
