[package]
name = "whaswapp-desktop"
version = "0.1.0"
description = "Lightweight WhatsApp Client"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
which = "8.0.0"
dirs = "6.0.0"

# New Libraries (Local)
cli-chat-rs = { path = "../../../libs/cli-chat-rs" }
web-intelligence = { path = "../../../libs/web-intelligence" }

# Submodules
whatsapp-rust = { path = "../../../whatsapp-rust" }
wacore-binary = { path = "../../../whatsapp-rust/wacore/binary" }
argon2 = "0.5.3"
aes-gcm = { version = "0.10.3", features = ["std"] }
rand = "0.9.2"
zeroize = "1.8.2"
rpassword = "7.4.0"
hex = "0.4.3"
ahenk = { git = "https://github.com/Appaholics/Ahenk" }
rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher"] }

[dev-dependencies]
tempfile = "3.24.0"
